styles.css
body {
	--quick-select-initial: var(--size-4-1);
	--quick-select-inset: var(--size-4-2);
}

.suggestion-item {
	display: flex;
	justify-content: start;
	align-items: center;
}

.suggestion-item .suggestion-highlight {
	line-height: 100%;
}

.suggestion-item:nth-child(-n+9 of :not(.mod-group)) {
	counter-increment: suggestion-counter;
	position: relative;
}

.suggestion-item .suggestion-content {
	width: 100%;
}

.suggestion-item:nth-child(-n+9 of :not(.mod-group))::after {
	content: counter(suggestion-counter);
	color: var(--text-muted);
	font-size: 0.8em;
	padding: 4px 8px;
	margin-left: auto;
	align-self: center;
	position: absolute;
	right: var(--quick-select-inset);
	background-color: var(--background-primary-alt);
	border-radius: 4px;
	opacity: 0;
}

.suggestion-container .suggestion-item:nth-child(-n+9 of :not(.mod-group))::after {
	right: var(--quick-select-initial);
}

/* None */
.quick-select-mod-key-active .suggestion-item:nth-child(-n+9 of :not(.mod-group))::after {
	opacity: 1;
}

/* Permanent */
.quick-select-transition-permanent .suggestion-item:nth-child(-n+9 of :not(.mod-group))::after {
	position: relative;
	opacity: 1;
	right: 0;
	margin-left: var(--quick-select-initial);
	padding: 0;
	background-color: transparent;
}

/* Slide */
.quick-select-transition-slide .suggestion-item:nth-child(-n+9 of :not(.mod-group))::after {
	right: -50px;
	transition: all 100ms ease-out;
}

.quick-select-transition-slide.quick-select-mod-key-active .suggestion-item:nth-child(-n+9 of :not(.mod-group))::after {
	transition: all 200ms ease-in;
	right: var(--quick-select-inset);
}

.quick-select-transition-slide.quick-select-mod-key-active .suggestion-container .suggestion-item:nth-child(-n+9 of :not(.mod-group))::after {
	right: var(--quick-select-initial);
}

/* Fade */
.quick-select-transition-fade .suggestion-item:nth-child(-n+9 of :not(.mod-group))::after {
	opacity: 0;
	right: var(--quick-select-inset);
}

.quick-select-transition-fade .suggestion-container .suggestion-item:nth-child(-n+9 of :not(.mod-group))::after {
	right: var(--quick-select-initial);
}

.quick-select-transition-fade.quick-select-mod-key-active .suggestion-item:nth-child(-n+9 of :not(.mod-group))::after {
	transition: all 200ms ease-in;
	opacity: 1;
}

.suggestion-item>div.callout {
	width: 100%;
	mix-blend-mode: normal;
}

